--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 </header>
 
 <nav>
-  <a href="index.html">Beranda</a>
-  <a href="tentang-saya.html">Tentang Saya</a>
+ <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
+  <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
   <a href="hubungi.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
   <a href="tabel.html">Tabel Perkalian</a>
