--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
 </header>
 
 <nav>
- <a class= href="index.html">Beranda</a>
-  <a class= href="Tentang-saya.html">Tentang Saya</a>
+  <a href="index.html">Beranda</a>
+  <a href="Tentang-saya.html">Tentang Saya</a>
   <a href="hubungi.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
-  <a href="tabel.html">Tabel Perkalian</a>
-  <a href="form-kunjungan.html">Formulir Kunjungan</a>
+  <a href="tabel_perkalian.html">Tabel Perkalian</a>
+  <a href="formulir-kunjungan.html">Formulir Kunjungan</a>
 </nav>
+
 
     <div class="container">
         <section>
