--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <nav>
   <a href="index.html">Beranda</a>
   <a href="Tentang-saya.html">Tentang Saya</a>
-  <a href="Hubungi.html">Hubungi Kami</a>
+  <a href="Hubungi-kami.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
   <a href="tabel_perkalian.html">Tabel Perkalian</a>
   <a href="formulir-kunjungan.html">Formulir Kunjungan</a>
