--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -71,6 +71,8 @@
         font-size: 18px;
       }
     }
+
+</style>
 </head>
 <body>
  <header class="header">
@@ -88,6 +90,7 @@
   <a href="tabel_perkalian.html">Tabel Perkalian</a>
   <a href="formulir-kunjungan.html">Formulir Kunjungan</a>
 </nav>
+
 <div class="container">
     <h2>Data Pribadi</h2>
     <p>Halaman ini berisi tentang informasi pribadi saya</p>
