--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
     }
 
 /* Container untuk event */
+    .event-title {
+  color: #FFF5E1; /* krem */
+  font-weight: bold;
+}
+    
 .event-container {
   display: flex;
   gap: 20px;
@@ -154,7 +159,7 @@
     </div>
 
  <section>
-            <h2>Event Sastra Terkini</h2>
+            <h2 class="event-title">Event Sastra Terkini</h2>
      <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
 
