--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -1,43 +1,96 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hubungi Kami</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perpustakaan Aura</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+  <style>
+/* Style untuk menu navigasi */
+      
+
+.header {
+      background-color: #940000; /* maroon */
+      color: #faebd7; /* krem */
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      border-bottom: 2px solid #faebd7;
+    }
+
+    .logo-left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo-left img {
+      height: 40px;
+    }
+
+    .center-title {
+      flex: 1;
+      text-align: center;
+      font-size: 22px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #faebd7;
+    }
+
+    nav {
+      background-color: #940000;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      border-top: 1px solid #d3b8a0; /* krem butek */
+    }
+
+    nav a {
+      color: #faebd7;
+      text-decoration: none;
+      padding: 12px 18px;
+      display: block;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #f2d9c4; /* krem kepinkan */
+      color: #000;
+    }
+
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      .center-title {
+        font-size: 18px;
+      }
+    }
+      
+</style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">PERPUSTAKAAN AURA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="Formulir_kunjungan.php">Formulir Kunjungan</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+ <header class="header">
+  <div class="logo-left">
+    <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
+  </div>
+  <div class="center-title">PERPUSTAKAAN AURA</div>
+</header>
+
+<nav>
+  <a href="index.html">Beranda</a>
+  <a href="Tentang-saya.html">Tentang Saya</a>
+  <a href="Hubungi-kami.html">Hubungi Kami</a>
+  <a href="koleksi.html">Koleksi</a>
+  <a href="tabel_perkalian.html">Tabel Perkalian</a>
+  <a href="formulir-kunjungan.html">Formulir Kunjungan</a>
+</nav>
+
     <div class="container">
     <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
     <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
