--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       
 
 .header {
-      background-color: #940000; /* maroon */
-      color: #faebd7; /* krem */
+      background-color: #003366; /* navy */
+      color: #E0E0E0; /* light grey */
       padding: 15px 20px;
       display: flex;
       align-items: center;
