--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
     }
 
     nav {
-      background-color: #940000;
+      background-color: #003366; /* navy */
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      border-top: 1px solid #d3b8a0; /* krem butek */
+      border-top: 1px solid #E0E0E0; /* light grey */
     }
 
     nav a {
-      color: #faebd7;
+      color: #E0E0E0;
       text-decoration: none;
       padding: 12px 18px;
       display: block;
@@ -58,7 +58,7 @@
     }
 
     nav a:hover {
-      background-color: #f2d9c4; /* krem kepinkan */
+      background-color: #008080; /* teal */
       color: #000;
     }
 
