--- a/koleksi.html
+++ b/koleksi.html
@@ -28,14 +28,14 @@
 
       <div class="container">
     <section class="my-5">
-        <h2 class="text-center mb-4" style="color: #800000; font-weight: bold;">Koleksi Pribadi</h2>
+        <h2 class="text-center mb-4" style="color: #9966CC; font-weight: bold;">Koleksi Pribadi</h2>
         <div class="row justify-content-center">
             <!-- Kolom pertama -->
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
                     <div class="card-body">
-                        <h5 class="card-title" style="color: #800000; font-weight: bold;">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
+                        <h5 class="card-title" style="color: #9966CC; font-weight: bold;">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
                         <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
                             Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
                         <a href="https://www.gramedia.com/best-seller/review-buku-map-of-the-soul-7-persona-shadow-ego/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
@@ -47,7 +47,7 @@
                 <div class="card" style="width: 18rem;">
                         <img src="gambar/gambar buku 2.webp" class="card-img-top" alt="Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #800000; font-weight: bold;">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
+                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
                             <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
                                 Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
                             <a href="https://www.gramedia.com/best-seller/review-buku-siapa-yang-datang-ke-pemakamanku-saat-aku-mati-nanti/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
@@ -59,7 +59,7 @@
                 <div class="card" style="width: 18rem;">
                         <img src="gambar/gambar buku 4.webp" class="card-img-top" alt="The Midnight Library">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #800000; font-weight: bold;">The Midnight Library</h5>
+                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">The Midnight Library</h5>
                             <p class="card-text">Perpustakaan Tengah Malam karya Matt Haig adalah sebuah novel yang mempesona karena membawa pembaca berpetualang menjelajahi kemungkinan kehidupan-kehidupan Nora Seed di rak perpustakaan. 
                                 Buku ini berbicara tentang penyesalan, hubungan, mimpi, hewan peliharaan, persahabatan, kemungkinan yang akan terjadi, dan yang paling penting bagaimana menjalani hidup di masa sekarang dan memanfaatkannya sebaik mungkin.</p>
                             <a href="https://www.gramedia.com/best-seller/review-novel-the-midnight-library-karya-matt-haig/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
@@ -71,7 +71,7 @@
                 <div class="card" style="width: 18rem;">
                         <img src="gambar/gambar buku 3.webp" class="card-img-top" alt="Kitchen">
                         <div class="card-body">
-                            <h5 class="card-title" style="color: #800000; font-weight: bold;">Kitchen</h5>
+                            <h5 class="card-title" style="color: #9966CC; font-weight: bold;">Kitchen</h5>
                             <p class="card-text"> Kitchen merupakan novel yang ditulis oleh Yoshimoto Banana, penulis asal Jepang. 
                                 Novel Kitchen pertama kali diterbitkan pada tahun 1988 dan sudah diterjemahkan ke dalam Bahasa Inggris pada tahun 1993 oleh Megan Backus. 
                                 Seluruh tokoh dalam kumpulan novel ini mengalami pergulatan batin akibat ditinggalkan oleh orang yang mereka cintai. 
