--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <a href="Tentang-saya.html">Tentang Saya</a>
   <a href="Hubungi-kami.html">Hubungi Kami</a>
   <a href="koleksi.html">Koleksi</a>
-  <a href="Tabel_perkalian.html">Tabel Perkalian</a>
-  <a href="Formulir-kunjungan.html">Formulir Kunjungan</a>
+  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
 
