--- a/Tabel_Perkalian.html
+++ b/Tabel_Perkalian.html
@@ -5,30 +5,30 @@
     <title>Tabel Perkalian 10x10</title>
     <style>
         body {
-            background-color: #800000; /* Maroon */
+            background-color: #9966CC; /* amethyst */
             font-family: Arial, sans-serif;
             padding: 20px;
-            color: #fff8e1; /* Krem */
+            color: #673AB7; /* ungu */
         }
         table {
             border-collapse: collapse;
             margin: auto;
-            background-color: #fff8e1; /* Krem */
+            background-color: #673AB7; 
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
         th, td {
-            border: 1px solid #800000;
+            border: 1px solid #9966CC;
             padding: 10px 15px;
             text-align: center;
             transition: background-color 0.3s, color 0.3s;
         }
         th {
-            background-color: #800000;
-            color: #fff8e1;
+            background-color: #9966CC;
+            color: #673AB7;
         }
         td:hover {
-            background-color: #800000;
-            color: #fff8e1;
+            background-color: #9966CC;
+            color: #673AB7;
             cursor: pointer;
         }
     </style>
