--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="5;url=index.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perpustakaan Aura</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css">\
 </head>
+  
 <body>
+  <div class="loader-container">
+    <h1>Selamat Datang di Perpustakaan Digital</h1>
+    <div class="loader-bar"></div>
+    <p class="quote">"Membaca adalah jendela dunia."</p>
+  </div>
  <header class="header">
   <div class="logo-left">
     <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
