Update and rename welcome.html to index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <script>
     // Redirect otomatis ke beranda.html
     setTimeout(() => {
-      window.location.href = "index.html";
+      window.location.href = "beranda.html";
     }, 5000); // 5 detik
   </script>
 </head>
