--- a/beranda.html
+++ b/beranda.html
@@ -26,7 +26,16 @@
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
-
+<section class="quote-section">
+  <div class="quote-overlay">
+    <marquee behavior="scroll" direction="left" scrollamount="6">
+      📖 "Membaca adalah jendela dunia." — Anonim &nbsp;&nbsp;&nbsp;
+      📚 "Perpustakaan adalah harta karun kehidupan." — Carl Sagan &nbsp;&nbsp;&nbsp;
+      🧠 "Pengetahuan adalah kekuatan." — Francis Bacon
+    </marquee>
+  </div>
+</section>
+  
     <div class="container">
         <section>
             <h2>Selamat Datang di Perpustakaan Aura!</h2>
