--- a/beranda.html
+++ b/beranda.html
@@ -26,15 +26,22 @@
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
-<section class="quote-section">
-  <div class="quote-overlay">
-    <marquee behavior="scroll" direction="left" scrollamount="6">
-      📖 "Membaca adalah jendela dunia." — Anonim &nbsp;&nbsp;&nbsp;
-      📚 "Perpustakaan adalah harta karun kehidupan." — Carl Sagan &nbsp;&nbsp;&nbsp;
-      🧠 "Pengetahuan adalah kekuatan." — Francis Bacon
-    </marquee>
-  </div>
-</section>
+<div class="carousel-container">
+    <div class="carousel">
+        <div class="carousel-item">
+            <img src="gambar1.jpg" alt="Gambar 1">
+            <p class="quote">"Kutipan pertama yang menarik."</p>
+        </div>
+        <div class="carousel-item">
+            <img src="gambar2.jpg" alt="Gambar 2">
+            <p class="quote">"Kutipan kedua yang menarik."</p>
+        </div>
+        <div class="carousel-item">
+            <img src="gambar3.jpg" alt="Gambar 3">
+            <p class="quote">"Kutipan ketiga yang menarik."</p>
+        </div>
+    </div>
+</div>
   
     <div class="container">
         <section>
