--- a/beranda.html
+++ b/beranda.html
@@ -29,7 +29,7 @@
 <div class="carousel-container">
     <div class="carousel">
         <div class="carousel-item">
-            <img src="gambar1.jpg" alt="Gambar 1">
+            <img src="gambar/perpustakaan 1.webp" alt="Gambar 1">
             <p class="quote">"Kutipan pertama yang menarik."</p>
         </div>
         <div class="carousel-item">
