--- a/beranda.html
+++ b/beranda.html
@@ -81,7 +81,7 @@
 
   </div>
 
-  <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
+ <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
@@ -91,6 +91,19 @@
   </button>
 </div>
 
+   <div class="text-center mt-5">
+  <!-- Poster gambar yang bisa diklik -->
+  <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
+    <img src="MOTS 7.jpg" alt="Poster Event" class="img-fluid rounded shadow" style="max-width: 800px;">
+  </a>
+
+  <!-- Tombol lihat event lainnya -->
+  <div class="mt-4">
+    <a href="event-lainnya.html" class="btn btn-outline-primary" target="_blank">
+      Lihat Event Lainnya
+    </a>
+  </div>
+</div>
 
     <footer>
         &copy; 2025 Perpustakaan Aura
