--- a/beranda.html
+++ b/beranda.html
@@ -49,20 +49,18 @@
      <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
 
-    <div class="carousel-item active">
-      <div class="d-flex justify-content-center">
-        <div class="card event-card">
-          <div class="card-body">
-            <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
-            <p class="card-text">  
-               <li>📅 27 April 2025</li>
-                <li>📍Gramedia Sudirman Yogyakarta</li>
-              <li>🕕 18.00 – selesai</li></p>
-            <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
-          </div>
-        </div>
-      </div>
+    <div style="display: flex; align-items: flex-start;">
+    <img src="MOTS 7.jpg" alt="Poster Event" style="width: 200px; margin-right: 20px;">
+    <div>
+        <h2>✨ Perjamuan Setahun Jokpin✨</h2>
+        <ul>
+            <li>📅 27 April 2025</li>
+            <li>📍 Gramedia Sudirman Yogyakarta</li>
+            <li>🕕 18.00 – selesai</li>
+        </ul>
+         <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
     </div>
+</div>
 
     <div class="carousel-item">
       <div class="d-flex justify-content-center">
