--- a/beranda.html
+++ b/beranda.html
@@ -45,22 +45,23 @@
     </div>
 
  <section>
-            <h2 class="event-title">Event Sastra Terkini</h2>
-     <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-
-    <div style="display: flex; align-items: flex-start;">
-    <img src="MOTS 7.jpg" alt="Poster Event" style="width: 200px; margin-right: 20px;">
-    <div>
-        <h2>✨ Perjamuan Setahun Jokpin✨</h2>
-        <ul>
-            <li>📅 27 April 2025</li>
-            <li>📍 Gramedia Sudirman Yogyakarta</li>
-            <li>🕕 18.00 – selesai</li>
-        </ul>
-         <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+              <div class="carousel-item active">
+      <div class="d-flex justify-content-center">
+        <div class="card event-card">
+          <div class="card-body">
+            <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
+            <p class="card-text">  
+               <li>📅 27 April 2025</li>
+                <li>📍Gramedia Sudirman Yogyakarta</li>
+              <li>🕕 18.00 – selesai</li></p>
+            <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+          <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan.jpg" target="_blank">
+                <img src="MOTS 7.jpg" alt="Poster Event" class="event-poster">
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
 
     <div class="carousel-item">
       <div class="d-flex justify-content-center">
@@ -79,7 +80,7 @@
 
   </div>
 
- <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
@@ -88,6 +89,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
 
    <div class="text-center mt-5">
   <!-- Poster gambar yang bisa diklik -->
