--- a/beranda.html
+++ b/beranda.html
@@ -45,65 +45,66 @@
     </div>
 
  <section>
-              <div class="carousel-item active">
-      <div class="d-flex justify-content-center">
-        <div class="card event-card">
-          <div class="card-body">
-            <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
-            <p class="card-text">  
-               <li>📅 27 April 2025</li>
-                <li>📍Gramedia Sudirman Yogyakarta</li>
-              <li>🕕 18.00 – selesai</li></p>
-            <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
-          <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan.jpg" target="_blank">
-                <img src="MOTS 7.jpg" alt="Poster Event" class="event-poster">
+  <h2 class="event-title text-center my-5">Event Sastra Terkini</h2>
+  
+  <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <!-- EVENT 1 -->
+      <div class="carousel-item active">
+        <div class="d-flex justify-content-center">
+          <div class="card event-card" style="max-width: 600px;">
+            <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
+              <img src="MOTS 7.jpg" class="card-img-top" alt="Poster Jokpin">
             </a>
+            <div class="card-body text-center">
+              <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
+              <ul class="list-unstyled">
+                <li>📅 27 April 2025</li>
+                <li>📍Gramedia Sudirman Yogyakarta</li>
+                <li>🕕 18.00 – selesai</li>
+              </ul>
+              <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="carousel-item">
-      <div class="d-flex justify-content-center">
-        <div class="card event-card">
-          <div class="card-body">
-            <h5 class="card-title">✨Panggung Puisi Keliling #TernyataTanpamu✨</h5>
-            <p class="card-text">
-                <li>📅26 April 2025</li>
+      <!-- EVENT 2 -->
+      <div class="carousel-item">
+        <div class="d-flex justify-content-center">
+          <div class="card event-card" style="max-width: 600px;">
+            <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">
+              <img src="MOTS 7.jpg" class="card-img-top" alt="Poster Ternyata Tanpamu">
+            </a>
+            <div class="card-body text-center">
+              <h5 class="card-title">✨Panggung Puisi Keliling #TernyataTanpamu✨</h5>
+              <ul class="list-unstyled">
+                <li>📅 26 April 2025</li>
                 <li>📍Gramedia Tunjungan Plaza Surabaya</li>
-           <li>⏰ Pukul 15.00 – 17.00 WIB</li></p>
-            <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+                <li>⏰ Pukul 15.00 – 17.00 WIB</li>
+              </ul>
+              <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+            </div>
           </div>
         </div>
       </div>
+
     </div>
 
+    <!-- Tombol navigasi carousel -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+</section>
 
 
-   <div class="text-center mt-5">
-  <!-- Poster gambar yang bisa diklik -->
-  <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
-    <img src="MOTS 7.jpg" alt="Poster Event" class="img-fluid rounded shadow" style="max-width: 800px;">
-  </a>
-
-  <!-- Tombol lihat event lainnya -->
-  <div class="mt-4">
-    <a href="event-lainnya.html" class="btn btn-outline-primary" target="_blank">
-      Lihat Event Lainnya
-    </a>
-  </div>
-</div>
 
     <footer>
         &copy; 2025 Perpustakaan Aura
