--- a/beranda.html
+++ b/beranda.html
@@ -44,27 +44,35 @@
         </section>
     </div>
 
- <section>
+<section>
   <h2 class="event-title text-center my-5">Event Sastra Terkini</h2>
-  
+
   <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
 
       <!-- EVENT 1 -->
       <div class="carousel-item active">
-        <div class="d-flex justify-content-center">
-          <div class="card event-card" style="max-width: 600px;">
-            <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
-              <img src="MOTS 7.jpg" class="card-img-top" alt="Poster Jokpin">
-            </a>
-            <div class="card-body text-center">
-              <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
-              <ul class="list-unstyled">
-                <li>📅 27 April 2025</li>
-                <li>📍Gramedia Sudirman Yogyakarta</li>
-                <li>🕕 18.00 – selesai</li>
-              </ul>
-              <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <!-- Gambar poster -->
+            <div class="col-md-6 text-center mb-3 mb-md-0">
+              <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
+                <img src="MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Jokpin" style="max-height: 400px;">
+              </a>
+            </div>
+            <!-- Informasi event -->
+            <div class="col-md-6">
+              <div class="card border-0">
+                <div class="card-body">
+                  <h5 class="card-title">✨ Perjamuan Setahun Jokpin ✨</h5>
+                  <ul class="list-unstyled">
+                    <li>📅 27 April 2025</li>
+                    <li>📍 Gramedia Sudirman Yogyakarta</li>
+                    <li>🕕 18.00 – selesai</li>
+                  </ul>
+                  <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary mt-3" target="_blank">Baca Selengkapnya</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -72,19 +80,25 @@
 
       <!-- EVENT 2 -->
       <div class="carousel-item">
-        <div class="d-flex justify-content-center">
-          <div class="card event-card" style="max-width: 600px;">
-            <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">
-              <img src="MOTS 7.jpg" class="card-img-top" alt="Poster Ternyata Tanpamu">
-            </a>
-            <div class="card-body text-center">
-              <h5 class="card-title">✨Panggung Puisi Keliling #TernyataTanpamu✨</h5>
-              <ul class="list-unstyled">
-                <li>📅 26 April 2025</li>
-                <li>📍Gramedia Tunjungan Plaza Surabaya</li>
-                <li>⏰ Pukul 15.00 – 17.00 WIB</li>
-              </ul>
-              <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-md-6 text-center mb-3 mb-md-0">
+              <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">
+                <img src="MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Ternyata Tanpamu" style="max-height: 400px;">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <div class="card border-0">
+                <div class="card-body">
+                  <h5 class="card-title">✨ Panggung Puisi Keliling #TernyataTanpamu ✨</h5>
+                  <ul class="list-unstyled">
+                    <li>📅 26 April 2025</li>
+                    <li>📍 Gramedia Tunjungan Plaza Surabaya</li>
+                    <li>⏰ Pukul 15.00 – 17.00 WIB</li>
+                  </ul>
+                  <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary mt-3" target="_blank">Baca Selengkapnya</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -92,7 +106,7 @@
 
     </div>
 
-    <!-- Tombol navigasi carousel -->
+    <!-- Navigasi Carousel -->
     <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -103,6 +117,7 @@
     </button>
   </div>
 </section>
+
 
 
 
