--- a/beranda.html
+++ b/beranda.html
@@ -45,7 +45,7 @@
     </div>
 
 <section>
-  <h2 class="event-title text-center my-5">Event Sastra Terkini</h2>
+  <h2 class="event-title text-center my-5">Event Terkini</h2>
 
   <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -57,7 +57,7 @@
             <!-- Gambar poster -->
             <div class="col-md-6 text-center mb-3 mb-md-0">
               <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
-                <img src="MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Jokpin" style="max-height: 400px;">
+                <img src="gambar/MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Jokpin" style="max-height: 400px;">
               </a>
             </div>
             <!-- Informasi event -->
@@ -84,7 +84,7 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-md-6 text-center mb-3 mb-md-0">
               <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">
-                <img src="MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Ternyata Tanpamu" style="max-height: 400px;">
+                <img src="gambar/MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Ternyata Tanpamu" style="max-height: 400px;">
               </a>
             </div>
             <div class="col-md-6">
