--- a/beranda.html
+++ b/beranda.html
@@ -44,77 +44,34 @@
         </section>
     </div>
 
-<section>
-  <h2 class="event-title text-center my-5">Event Terkini</h2>
+<section class="my-5">
+  <h2 class="text-center mb-4">Event Sastra Terkini</h2>
+  <div class="container">
+    <div class="row justify-content-center">
 
-  <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-
-      <!-- EVENT 1 -->
-      <div class="carousel-item active">
-        <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <!-- Gambar poster -->
-            <div class="col-md-6 text-center mb-3 mb-md-0">
-              <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">
-                <img src="gambar/MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Jokpin" style="max-height: 400px;">
-              </a>
+      <!-- EVENT CARD -->
+      <div class="col-md-10 mb-4">
+        <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="text-decoration-none">
+          <div class="card flex-row shadow-sm event-card-hover">
+            <!-- Gambar -->
+            <div class="col-md-4">
+              <img src="gambar/MOTS 7.jpg" alt="Poster Jokpin" class="img-fluid h-100 w-100 object-fit-cover rounded-start">
             </div>
-            <!-- Informasi event -->
-            <div class="col-md-6">
-              <div class="card border-0">
-                <div class="card-body">
-                  <h5 class="card-title">✨ Perjamuan Setahun Jokpin ✨</h5>
-                  <ul class="list-unstyled">
-                    <li>📅 27 April 2025</li>
-                    <li>📍 Gramedia Sudirman Yogyakarta</li>
-                    <li>🕕 18.00 – selesai</li>
-                  </ul>
-                  <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary mt-3" target="_blank">Baca Selengkapnya</a>
-                </div>
-              </div>
+            <!-- Info -->
+            <div class="col-md-8 p-3">
+              <h5 class="card-title">✨ Perjamuan Setahun Jokpin ✨</h5>
+              <ul class="list-unstyled mb-3">
+                <li>📅 27 April 2025</li>
+                <li>📍 Gramedia Sudirman Yogyakarta</li>
+                <li>🕕 18.00 – selesai</li>
+              </ul>
+              <span class="btn btn-outline-primary">Baca Selengkapnya</span>
             </div>
           </div>
-        </div>
-      </div>
-
-      <!-- EVENT 2 -->
-      <div class="carousel-item">
-        <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-md-6 text-center mb-3 mb-md-0">
-              <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">
-                <img src="gambar/MOTS 7.jpg" class="img-fluid rounded shadow" alt="Poster Ternyata Tanpamu" style="max-height: 400px;">
-              </a>
-            </div>
-            <div class="col-md-6">
-              <div class="card border-0">
-                <div class="card-body">
-                  <h5 class="card-title">✨ Panggung Puisi Keliling #TernyataTanpamu ✨</h5>
-                  <ul class="list-unstyled">
-                    <li>📅 26 April 2025</li>
-                    <li>📍 Gramedia Tunjungan Plaza Surabaya</li>
-                    <li>⏰ Pukul 15.00 – 17.00 WIB</li>
-                  </ul>
-                  <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary mt-3" target="_blank">Baca Selengkapnya</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        </a>
       </div>
 
     </div>
-
-    <!-- Navigasi Carousel -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
 </section>
 
