--- a/beranda.html
+++ b/beranda.html
@@ -45,37 +45,30 @@
     </div>
 
 <section class="my-5">
-  <h2 class="text-center mb-4">Event Sastra Terkini</h2>
+  <h2 class="text-center mb-4">Event Terkini</h2>
   <div class="container">
-    <div class="row justify-content-center">
-
-      <!-- EVENT CARD -->
-      <div class="col-md-10 mb-4">
-        <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="text-decoration-none">
-          <div class="card flex-row shadow-sm event-card-hover">
-            <!-- Gambar -->
-            <div class="col-md-4">
-              <img src="gambar/MOTS 7.jpg" alt="Poster Jokpin" class="img-fluid h-100 w-100 object-fit-cover rounded-start">
-            </div>
-            <!-- Info -->
-            <div class="col-md-8 p-3">
-              <h5 class="card-title">✨ Perjamuan Setahun Jokpin ✨</h5>
-              <ul class="list-unstyled mb-3">
-                <li>📅 27 April 2025</li>
-                <li>📍 Gramedia Sudirman Yogyakarta</li>
-                <li>🕕 18.00 – selesai</li>
-              </ul>
-              <span class="btn btn-outline-primary">Baca Selengkapnya</span>
-            </div>
+    <div class="event-card-wrapper mb-4">
+      <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="event-card-link">
+        <div class="event-card d-flex flex-column flex-md-row">
+          <!-- Gambar -->
+          <div class="event-image-container">
+            <img src="gambar/MOTS 7.jpg" alt="Poster Jokpin" class="event-image">
           </div>
-        </a>
-      </div>
-
+          <!-- Info -->
+          <div class="event-info p-4">
+            <h5 class="mb-3">✨ Perjamuan Setahun Jokpin ✨</h5>
+            <ul class="list-unstyled mb-3">
+              <li>📅 27 April 2025</li>
+              <li>📍 Gramedia Sudirman Yogyakarta</li>
+              <li>🕕 18.00 – selesai</li>
+            </ul>
+            <span class="btn btn-outline-primary">Baca Selengkapnya</span>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 </section>
-
-
 
 
     <footer>
