--- a/beranda.html
+++ b/beranda.html
@@ -47,29 +47,75 @@
 <section class="my-5">
   <h2 class="text-center mb-4">Event Terkini</h2>
   <div class="container">
+
+    <!-- Event 1 -->
     <div class="event-card-wrapper mb-4">
       <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank" class="event-card-link">
         <div class="event-card d-flex flex-column flex-md-row">
-          <!-- Gambar -->
           <div class="event-image-container">
-            <img src="gambar/MOTS 7.jpg" alt="Poster Jokpin" class="event-image">
+            <img src="gambar/eventjoko.jpg" alt="Poster Jokpin" class="event-image">
           </div>
-          <!-- Info -->
           <div class="event-info p-4">
             <h5 class="mb-3">✨ Perjamuan Setahun Jokpin ✨</h5>
+            <p>Mari kita rayakan warisan puisi Joko Pinurbo, dalam sebuah perjamuan penuh kenangan, tepat setahun setelah kepergiannya. 
+                Bersama keluarga mendiang, Forum Aktor Yogya, para seniman, dan pecinta puisi, kita akan menikmati pertunjukan, pembacaan puisi, peresmian patung Jokpin karya Dunadi, serta peluncuran edisi spesial buku Celana.</p>
             <ul class="list-unstyled mb-3">
               <li>📅 27 April 2025</li>
               <li>📍 Gramedia Sudirman Yogyakarta</li>
               <li>🕕 18.00 – selesai</li>
             </ul>
-            <span class="btn btn-outline-primary">Baca Selengkapnya</span>
+            <span class="btn">Baca Selengkapnya</span>
           </div>
         </div>
       </a>
     </div>
+
+    <!-- Event 2 -->
+    <div class="event-card-wrapper mb-4">
+      <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank" class="event-card-link">
+        <div class="event-card d-flex flex-column flex-md-row">
+          <div class="event-image-container">
+            <img src="gambar/eventnatasya.jpg" alt="Poster Puisi Keliling" class="event-image">
+          </div>
+          <div class="event-info p-4">
+            <h5 class="mb-3">✨ Panggung Puisi Keliling #TernyataTanpamu ✨</h5>
+            <p>Teman-teman Diksi Aca di Bandung, siap-siap! Panggung Puisi Keliling #TernyataTanpamu hadir di Gramedia Merdeka! ✨
+              Selain diskusi buku bareng Natasha Rizky, akan ada kegiatan open mic puisi untuk kamu yang ingin unjuk rasa lewat kata 🎤</p>
+            <ul class="list-unstyled mb-3">
+              <li>📅 26 April 2025</li>
+              <li>📍 Gramedia Tunjungan Plaza Surabaya</li>
+              <li>🕕 15.00 – 17.00 WIB</li>
+            </ul>
+            <span class="btn">Baca Selengkapnya</span>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <!-- Event 3 -->
+    <div class="event-card-wrapper mb-4">
+      <a href="https://www.gramedia.id/events/read/peluncuran-antologi-puisi-rembulan-di-antara-pelabuhan" target="_blank" class="event-card-link">
+        <div class="event-card d-flex flex-column flex-md-row">
+          <div class="event-image-container">
+            <img src="gambar/eventwebinar.jpg" alt="Poster Rembulan" class="event-image">
+          </div>
+          <div class="event-info p-4">
+            <h5 class="mb-3">✨ Webinar: Awareness Integrationan Management System ISO 9001, ISO 14001 & ISO 45001 ✨</h5>
+            <ul class="list-unstyled mb-3">
+              <p>Bersama Dr. Faisal Ikhram, S.E., M.M., CRMP, kita akan mempelajari mengania latar belakang IMS ISO 9001, ISO 14001 & ISO 45001, pengenalan & Pedoman IMS, manfaat Integrationan Management System, serta tujuan Integrationan Management System.</p>
+              <li>📅 Kamis, 15 Mei 2025</li>
+              <li>📍 Zoom Meeting</li>
+              <li>🕕 08:45 s/d 11.30 WIB</li>
+              <li>👨‍💼 Dr. Faisal Ikhram, S.E., M.M., CRMP.</li>
+            </ul>
+            <span class="btn">Baca Selengkapnya</span>
+          </div>
+        </div>
+      </a>
+    </div>
+
   </div>
 </section>
-
 
     <footer>
         &copy; 2025 Perpustakaan Aura
