--- a/beranda.html
+++ b/beranda.html
@@ -45,7 +45,7 @@
     </div>
 
 <section class="my-5">
-  <h2 class="text-center mb-4">Event Sastra Terkini</h2>
+  <h2 class="text-center mb-4">Event Terkini</h2>
   <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <!-- Event 1 -->
